--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To-Do</title>
+  </head>
+  <body>
+    <div id="container">
+      <h2>To-Do-list</h2>
+      <input type="text" id="input" placeholder="text" />
+      <button id="addbtn">submit</button>
+    </div>
+    <div class="list">
+      <div>
+        <p></p>
+      </div>
+      <div>
+        <h1></h1>
+      </div>
+      <div>
+        <p></p>
+      </div>
+      <div>
+        <p></p>
+      </div>
+    </div>
+    <script src="main.js"></script>
+  </body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do</title>
-</head>
-<body>
-    <script src="main.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To Do App</title>
+  </head>
+  <body>
+    <div id="header">
+      <h1 id="main">To-Do list</h1>
+      <div>
+        <input type="text" placeholder="title" id="input" />
+        <button id="add">Add</button>
+      </div>
+    </div>
+    <div id="list"></div>
+    <script src="./main.js"></script>
+  </body>
 </html>
