--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <form onsubmit="preventReloading()">
-      <input type="text" id="input-title" />
+      <input type="text" placeholder="Add a to-do" id="input-title" />
       <div id="add-container">
         <button id="add">
           <i class="fa-solid fa-circle-plus"></i>
